--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Correction Git et Github</h1>
+    <h1>Correction Git et Github et quelque chose</h1>
 </body>
 </html>
